--- a/src/gui_mumo_gen.ui
+++ b/src/gui_mumo_gen.ui
@@ -391,7 +391,7 @@
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_4">
               <item>
-               <widget class="QGroupBox" name="groupBox">
+               <widget class="QGroupBox" name="gb_elo">
                 <property name="title">
                  <string>ELO</string>
                 </property>
