--- a/src/gui_mumo_gen.ui
+++ b/src/gui_mumo_gen.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>845</width>
-    <height>786</height>
+    <width>979</width>
+    <height>970</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
@@ -18,6 +24,12 @@
   </property>
   <property name="windowTitle">
    <string>CNC-Prozesserstellung</string>
+  </property>
+  <property name="animated">
+   <bool>false</bool>
+  </property>
+  <property name="documentMode">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -32,6 +44,36 @@
          <string>CNC-Prozesseinstellungen</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_10">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QLineEdit" name="txt_proz_name">
+             <property name="placeholderText">
+              <string>Prozessname (EBS, EBU, EBH, etc)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_8">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_7">
            <property name="bottomMargin">
@@ -66,13 +108,6 @@
                <widget class="QRadioButton" name="rb_flash">
                 <property name="text">
                  <string>Flash-Prozess</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="txt_proz_name">
-                <property name="placeholderText">
-                 <string>Prozessname (EBS, EBU, EBH, etc)</string>
                 </property>
                </widget>
               </item>
@@ -152,8 +187,48 @@
                 <property name="bottomMargin">
                  <number>0</number>
                 </property>
+                <item row="1" column="1">
+                 <widget class="QCheckBox" name="cb_auto">
+                  <property name="toolTip">
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Fahre ohne Einrichtung in eine bestimmte Richtung.&lt;/p&gt;&lt;p&gt;ELO wird nur zum Anfahren der Anfangsposition genutzt.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  </property>
+                  <property name="text">
+                   <string>Auto</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QRadioButton" name="rb_dir_x">
+                  <property name="text">
+                   <string>X</string>
+                  </property>
+                  <property name="checked">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QRadioButton" name="rb_dir_y">
+                  <property name="text">
+                   <string>Y</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="2">
+                 <widget class="QToolButton" name="tb_ext_cnc">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="text">
+                   <string>...</string>
+                  </property>
+                 </widget>
+                </item>
                 <item row="3" column="1">
                  <widget class="QLineEdit" name="txt_ext_cnc">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -171,44 +246,10 @@
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="0">
-                 <widget class="QRadioButton" name="rb_dir_y">
-                  <property name="text">
-                   <string>Y</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0">
-                 <widget class="QRadioButton" name="rb_dir_x">
-                  <property name="text">
-                   <string>X</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="1">
-                 <widget class="QCheckBox" name="cb_auto">
-                  <property name="toolTip">
-                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Fahre ohne Einrichtung in eine bestimmte Richtung.&lt;/p&gt;&lt;p&gt;ELO wird nur zum Anfahren der Anfangsposition genutzt.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                  </property>
-                  <property name="text">
-                   <string>Auto</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="3" column="0">
                  <widget class="QRadioButton" name="rb_cnc_ext">
                   <property name="text">
                    <string>CNC</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="2">
-                 <widget class="QToolButton" name="tb_ext_cnc">
-                  <property name="text">
-                   <string>...</string>
                   </property>
                  </widget>
                 </item>
@@ -248,54 +289,37 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_5">
            <item>
-            <widget class="QGroupBox" name="groupBox_9">
+            <widget class="QGroupBox" name="gb_strahlstrom">
              <property name="title">
               <string>Strahlstrom</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_5">
               <item>
-               <widget class="QRadioButton" name="rb_ib_ramp">
-                <property name="text">
-                 <string>Rampe</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QRadioButton" name="rb_ib_const">
-                <property name="text">
-                 <string>Konstant</string>
-                </property>
-                <property name="checked">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <layout class="QFormLayout" name="formLayout">
-                <property name="horizontalSpacing">
-                 <number>7</number>
-                </property>
-                <property name="verticalSpacing">
+               <layout class="QGridLayout" name="gridLayout_3">
+                <property name="topMargin">
                  <number>0</number>
                 </property>
-                <item row="0" column="0">
-                 <widget class="QRadioButton" name="rb_ib_ext">
-                  <property name="text">
-                   <string>Extern</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="1" column="0">
-                 <widget class="QLineEdit" name="txt_ext_ib">
-                  <property name="placeholderText">
-                   <string>Dateiname</string>
+                 <widget class="QRadioButton" name="rb_ib_const">
+                  <property name="text">
+                   <string>Konstant</string>
+                  </property>
+                  <property name="checked">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="1">
-                 <widget class="QToolButton" name="tb_ib_ext">
+                <item row="0" column="0">
+                 <widget class="QRadioButton" name="rb_ib_ramp">
                   <property name="text">
-                   <string>...</string>
+                   <string>Rampe</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QRadioButton" name="radioButton_3">
+                  <property name="text">
+                   <string>Gepulst</string>
                   </property>
                  </widget>
                 </item>
@@ -762,11 +786,11 @@
            <property name="alternatingRowColors">
             <bool>true</bool>
            </property>
-           <attribute name="horizontalHeaderDefaultSectionSize">
-            <number>86</number>
-           </attribute>
            <attribute name="horizontalHeaderMinimumSectionSize">
             <number>71</number>
+           </attribute>
+           <attribute name="horizontalHeaderDefaultSectionSize">
+            <number>86</number>
            </attribute>
            <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
             <bool>true</bool>
@@ -984,6 +1008,32 @@
            </layout>
           </widget>
          </item>
+         <item>
+          <spacer name="horizontalSpacer_9">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_10">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
         </layout>
        </item>
       </layout>
@@ -1015,7 +1065,7 @@
       <property name="checkable">
        <bool>false</bool>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_8">
+      <layout class="QHBoxLayout" name="horizontalLayout_12">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
@@ -1028,7 +1078,7 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>754</width>
              <height>150</height>
             </size>
            </property>
@@ -1072,7 +1122,7 @@
             <bool>true</bool>
            </attribute>
            <attribute name="horizontalHeaderStretchLastSection">
-            <bool>true</bool>
+            <bool>false</bool>
            </attribute>
            <attribute name="verticalHeaderVisible">
             <bool>false</bool>
@@ -1737,8 +1787,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>845</width>
-     <height>21</height>
+     <width>979</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
